--- a/app/views/v5/l4/users/register/password.html
+++ b/app/views/v5/l4/users/register/password.html
@@ -21,37 +21,52 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Create a new password</h1>
-            <p>Your password must be at least 8 characters long.</p>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            {% include 'includes/password-error-summary.njk' %}
 
-            <p>It must also contain:</p>
+            <form id="tpas_password_form" method="post" class="form" action="mobile">
+                <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint passport-issued-error">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                        <h1 class="govuk-fieldset__heading">Create a new password</h1>
+                    </legend>
 
-            <ul class="govuk-list govuk-list--bullet">
-              <li>1 upper case letter</li>
-              <li>1 lower case letter</li>
-              <li>1 number</li>
-              <li>1 special character (e.g '!', '?' or '%')</li>
-            </ul>
+                    <p>Your password must be at least 8 characters long.</p>
 
-            <div class="govuk-form-group govuk-!-margin-top-6">
-                <label class="govuk-label" for="width-20">
-                    Enter new password
-                </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
-            </div>
+                    <p>It must also contain:</p>
 
-            <div class="govuk-form-group">
-                <label class="govuk-label" for="width-20">
-                    Confirm new password
-                </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
-            </div>
+                    <ul class="govuk-list govuk-list--bullet">
+                    <li>1 upper case letter</li>
+                    <li>1 lower case letter</li>
+                    <li>1 number</li>
+                    <li>1 special character (e.g '!', '?' or '%')</li>
+                    </ul>
 
-            {{ govukButton({
-                text: "Create password",
-                href: "mobile.html"
-            }) }}
-  </div>
+                    <div class="govuk-form-group govuk-!-margin-top-6">
+                        <label class="govuk-label" for="txt_tpas_password">
+                            Enter new password
+                        </label>
+
+                        <input class="govuk-input govuk-input--width-20" id="txt_tpas_password" name="txt_tpas_password" type="password">
+                    </div>
+
+                    <div class="govuk-form-group">
+                        <label class="govuk-label" for="txt_tpas_confirm_password">
+                            Confirm new password
+                        </label>
+
+                        <input class="govuk-input govuk-input--width-20" id="txt_tpas_confirm_password" name="txt_tpas_confirm_password" type="password">
+                    </div>
+
+                    <button class="govuk-button" data-module="govuk-button" id="continue">
+                        Create password
+                    </button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+{% endblock %}
+
+{% block pageScripts %}
+    {% include 'includes/validation.njk' %}
 {% endblock %}
