--- a/app/views/v5/l2/users/register/start.html
+++ b/app/views/v5/l2/users/register/start.html
@@ -34,7 +34,7 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-top-6">Before you start</h2>
 
-      <p>You'll need your mobile phone</p>
+      <p>You'll need your mobile phone.</p>
       <p>After you have registered, we will send you a code to your mobile whenever you want to sign in. This makes
         the service more secure by proving it is you signing in. </p>
 
