--- a/app/views/v5/l3/users/register/code.html
+++ b/app/views/v5/l3/users/register/code.html
@@ -25,7 +25,7 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">We have sent you a text message with your code</h1>
             <p>It should arrive in a few minutes.</p>
-            <p>We sent it to 0778 7147346.</p>
+            <p>We sent it to {{ data['mobile-number-code'] }}.</p>
 
             {{ govukDetails({
                 summaryText: "This phone number is wrong",
