--- a/app/views/v5/l4/users/register/qr.html
+++ b/app/views/v5/l4/users/register/qr.html
@@ -34,7 +34,7 @@
 
                 <li>
                     Scan this QR code using the app:<br>
-                    <img style="width: 200px;" src="/public/images/qrcode.png" alt="qr code">
+                    <img src="/public/images/qr-code.png" alt="qr code">
 
                     <details class="govuk-details" data-module="govuk-details">
                         <summary class="govuk-details__summary">
