Update password pages with Nick's new content

--- a/app/views/includes/validation.njk
+++ b/app/views/includes/validation.njk
@@ -85,8 +85,8 @@
                     messages: {
                         txt_tpas_password: {
                             required: "Enter the password you'd like to use",
-                            minlength: "Your password needs to be at least 8 characters long.",
-                            pattern: "Your password needs to include 1 or more upper case letters, lower case letters, numbers and special characters (e.g '!', '?' or '%').",
+                            minlength: "Password must be 8 characters or more",
+                            pattern: "Password must only include letters, numbers and these special characters: @ # $ % ^ & * - _ ! + = [ ] { } | \ : ‘ , . ? / ` ~ \" ( ) ;",
                             notEqual: 'You can\'t use the example password'
                         },
                         txt_tpas_confirm_password: {
