--- a/app/views/v5/l2/users/register/code.html
+++ b/app/views/v5/l2/users/register/code.html
@@ -21,10 +21,12 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">We have sent you a text message with your code</h1>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-l">We have sent you a text message with your code</h1>
+
             <p>It should arrive in a few minutes.</p>
+
             <p>We sent it to {{ data['mobile-number-code'] }}.</p>
 
             {{ govukDetails({
@@ -34,8 +36,9 @@
 
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
-                        Code
+                    Code
                 </label>
+
                 <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
             </div>
 
@@ -44,6 +47,9 @@
                 href: "app-check.html"
             }) }}
 
-            <p><a href="resend-code">I did not get a code</a></p>
-  </div>
+            <p>
+                <a href="resend-code">I did not get a code</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
