--- a/app/views/v5/l3/signed-out.html
+++ b/app/views/v5/l3/signed-out.html
@@ -21,18 +21,13 @@
 {% endblock %}
 
 {% block content %}
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <form class="form" action="signin" method="post">
+                <h1 class="govuk-heading-l">You have signed out</h1>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-
-        <form class="form" action="citizen-details-b" method="post">
-
-          <h1 class="govuk-heading-l">You have signed out</h1>
-
-          <p><a href="signin">Sign in again</a></p>
-
-      </form>
+                <p><a href="signin">Sign in again</a></p>
+            </form>
+        </div>
     </div>
-  </div>
-
 {% endblock %}
