Bad hack to remove GDS Transport font

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -15,6 +15,10 @@ $govuk-assets-path: '/govuk/assets/';
 // Components that aren't in Frontend
 @import "components/cookie-banner";
 
+body * {
+    font-family: 'Helvetica Neue', Helvetica, Arial, -apple-system, BlinkMacSystemFont, Segoe UI, sans-serif !important;
+}
+
 .govuk-header__nav {
   float: right;
 }
