Add service error to dev1 prototype

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -589,18 +589,25 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
+
                     Removed 'Last logged in' from user details due to current technical challenges
                 </li>
+
                 <li>
                     Removed 'Suspend the user' from user details
                 </li>
+
                 <li>
                     Added in research prototype version of 'choose user organisation' - accepted on the basis it may change after future user research
                 </li>
 
                 <li>
-                        Changed 'Full name' input to 'First name, Last name' due to concerns around data storage
-                    </li>
+                    Changed 'Full name' input to 'First name, Last name' due to concerns around data storage
+                </li>
+
+                <li>
+                    Added <a href="/dev1/error/service" class="govuk-link">service error</a> page
+                </li>
             </ul>
         {% endset %}
 
