--- a/app/views/v5/error/service.html
+++ b/app/views/v5/error/service.html
@@ -22,7 +22,7 @@
                     </p>
 
                     <p class="govuk-body">
-                        You can try to send the invite again or return to the dashboard.
+                        You can try to <a href="#" class="govuk-link">send the invite again</a> or <a href="#" class="govuk-link">return to the dashboard</a>.
                     </p>
 
                     <p class="govuk-body">
