--- a/app/views/v5/l2/users/view/sorted/all-by-status-reverse.html
+++ b/app/views/v5/l2/users/view/sorted/all-by-status-reverse.html
@@ -44,6 +44,12 @@
 
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Donald Revie</a></th>
+                    <td class="govuk-table__cell">Serco</td>
+                    <td class="govuk-table__cell">Invite expired</td>
+                </tr>
+
+                <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Invite sent</td>
@@ -94,12 +100,6 @@
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John McKenzie</a></th>
                     <td class="govuk-table__cell">London Borough of Croydon Council</td>
-                    <td class="govuk-table__cell">Access expired</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                    <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell">Access expired</td>
                 </tr>
             </tbody>
