--- a/app/views/index.html
+++ b/app/views/index.html
@@ -195,6 +195,14 @@
                 <li>Added page to edit organisation address</li>
 
                 <li>Added <a href="/v5/error/service" class="govuk-link">service error</a> page</li>
+
+                <li>
+                    Removed GDS Transport from font family
+                </li>
+
+                <li>
+                    Added clickable sorting table heading column titles and some faux sorted views
+                </li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
