More summary page work, super hacky.

--- a/app/views/v5/add-service/custom-data.html
+++ b/app/views/v5/add-service/custom-data.html
@@ -46,8 +46,7 @@
 
             {{ govukDetails({
                 summaryText: "Help with additional data",
-                text: "Additional data can be customised beyond this. For instance this could be used to define any specific
-                user roles or teams you may have within your service"
+                text: "Additional data can be customised beyond this. For instance this could be used to define any specific user roles or teams you may have within your service"
             }) }}
 
             <form id="form" method="post" action="custom-data-branch">
