--- a/app/views/v5/add-service/admins.html
+++ b/app/views/v5/add-service/admins.html
@@ -50,7 +50,7 @@
                             text: "Last name"
                         },
                         id: "admin-1-last-name",
-                        name: "contact-1-last-name",
+                        name: "admin-1-last-name",
                         classes: "govuk-!-width-three-quarters"
                     }) }}
 
@@ -121,7 +121,7 @@
                     </label>
 
 
-                    <input class="govuk-input govuk-!-width-three-quarters" id="admin-${adminIndex}-last-name" name="contact-${adminIndex}-last-name" type="text">
+                    <input class="govuk-input govuk-!-width-three-quarters" id="admin-${adminIndex}-last-name" name="admin-${adminIndex}-last-name" type="text">
                 </div>
 
                 <div class="govuk-form-group">
