Amends to values on radios and checkboxes

--- a/app/views/v5/add-service/users.html
+++ b/app/views/v5/add-service/users.html
@@ -48,19 +48,19 @@
                         },
                         items: [
                             {
-                                value: "internal-dwp",
+                                value: "Internal DWP",
                                 text: "Internal DWP"
                             },
                             {
-                                value: "other-gov",
+                                value: "Other government departments",
                                 text: "Other government departments"
                             },
                             {
-                                value: "local-authority",
+                                value: "Local authority",
                                 text: "Local authority"
                             },
                             {
-                                value: "external-third-party",
+                                value: "External third party",
                                 text: "External third party"
                             }
                         ]
@@ -77,19 +77,19 @@
                         },
                         items: [
                             {
-                                value: "1-50",
+                                value: "1 to 50",
                                 text: "1 to 50"
                             },
                             {
-                                value: "51-100",
+                                value: "51 to 100",
                                 text: "51 to 100"
                             },
                             {
-                                value: "101-200",
+                                value: "101 to 200",
                                 text: "101 to 200"
                             },
                             {
-                                value: "200-above",
+                                value: "200 and above",
                                 text: "200 and above"
                             }
                         ]
