Amends to Business Area select

--- a/app/views/v5/add-service/details.html
+++ b/app/views/v5/add-service/details.html
@@ -70,16 +70,24 @@
                         },
                         items: [
                             {
-                                value: "Health",
-                                text: "Health"
+                                value: "Child Maintenance Group",
+                                text: "Child Maintenance Group"
+                            },
+                            {
+                                value: "Digital Group",
+                                text: "Digital Group"
+                            },
+                            {
+                                value: "Finance Group",
+                                text: "Finance Group"
                             },
                             {
                                 value: "Universal Credit",
                                 text: "Universal Credit"
                             },
                             {
-                                value: "Identity and Trust",
-                                text: "Identity and Trust"
+                                value: "Work and Health Group",
+                                text: "Work and Health Group"
                             }
                         ]
                         }) }}
