--- a/app/views/v5/add-service/technical.html
+++ b/app/views/v5/add-service/technical.html
@@ -81,7 +81,7 @@
                         text: "Continue"
                     }) }}
 
-                    <p><a href="#">I'll add these later</a></p>
+                    <p><a href="users">I'll add these later</a></p>
                 </fieldset>
             </form>
         </div>
