Amends to index changes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -203,6 +203,10 @@
                 <li>
                     Added clickable sorting table heading column titles and some faux sorted views
                 </li>
+
+                <li>
+                    Added initial user journey for <a href="/v5/add-service/start" class="govuk-link"></a>Add your service</a> 
+                </li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
