Amends to index changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -205,7 +205,7 @@
                 </li>
 
                 <li>
-                    Added initial user journey for <a href="/v5/add-service/start" class="govuk-link"></a>Add your service</a> 
+                    Added initial user journey for <a href="/v5/add-service/start" class="govuk-link">Add your service</a> 
                 </li>
             </ul>
 
