Update password feedback text, password reset password rules text

--- a/app/views/includes/validation.njk
+++ b/app/views/includes/validation.njk
@@ -90,8 +90,8 @@
                             notEqual: 'You can\'t use the example password'
                         },
                         txt_tpas_confirm_password: {
-                            required: "Re-enter the password you’d like to use",
-                            equalTo: "Your passwords don't match. Enter them again."
+                            required: "Re-enter your password",
+                            equalTo: "Your passwords do not match"
                         }
                     }
                 };
