--- a/app/views/v5/l2/users/reset-password/password.html
+++ b/app/views/v5/l2/users/reset-password/password.html
@@ -25,16 +25,20 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Create a new password</h1>
 
-            <p>Your password must be at least 8 characters long.</p>
+            <p>Your password must be 8 characters or more.</p>
 
-            <p>It must also contain:</p>
+            <p>It must include at least:</p>
 
             <ul class="govuk-list govuk-list--bullet">
-              <li>1 upper case letter</li>
-              <li>1 lower case letter</li>
-              <li>1 number</li>
-              <li>1 special character (e.g '!', '?' or '%')</li>
+                <li>one upper case letter</li>
+                <li>one lower case letter</li>
+                <li>one number</li>
+                <li>one of these special characters: @ # $ % ^ & * - _ ! + = [ ] { } | \ : ‘ , . ? / ` ~ " ( ) ;</li>
             </ul>
+
+            <p>
+                It cannot include special characters that are not on this list.
+            </p>
 
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
