--- a/app/views/v6/l3/users/view/all-2.html
+++ b/app/views/v6/l3/users/view/all-2.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <h1 class="govuk-heading-l listing-page">
-        <span class="govuk-caption-l">Capita</span>
+        <span class="govuk-caption-l">{{ data['prototype-organisation'] }}</span>
         Users
     </h1>
 
