--- a/app/views/v6/l3/users/add/confirmation.html
+++ b/app/views/v6/l3/users/add/confirmation.html
@@ -21,9 +21,10 @@
         {% if data["organisation-name"] == 'dwp' %}
             {{ data["user-first-name"] }} {{ data['user-last-name'] }} added to the Department for Work and Pensions
         {% else %}
-            {{ data["user-first-name"] }} {{ data['user-last-name'] }} added to {{ data["organisation-name"] }}
+            {{ data["user-first-name"] }} {{ data['user-last-name'] }} added to {{ data['prototype-organisation'] }}
         {% endif %}
     {% endset %}
+
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
@@ -41,7 +42,7 @@
                     </a>
                 {% else %}
                     <a href="javascript:window.history.back()" class="govuk-link">
-                        Add another user to {{ data['organisation-name'] }}
+                        Add another user to {{ data['prototype-organisation'] }}
                     </a>
                 {% endif %}
             </p>
