Edits to content on 2FA mobile pages

--- a/app/views/v6/l2/users/register/mobile.html
+++ b/app/views/v6/l2/users/register/mobile.html
@@ -26,7 +26,7 @@
             <h1 class="govuk-heading-l">Enter your mobile phone number</h1>
 
             <p>
-                You cannot use a landline number. This is because landlines are often used be used by many people, so they are not as secure as mobiles.
+                You cannot use a landline number. This is because landlines are often used by many people, so they are not as secure as mobiles.
             </p>
 
             <form action="code" method="post" class="form">
